--- a/app/src/main/res/layout/activity_weapon_info.xml
+++ b/app/src/main/res/layout/activity_weapon_info.xml
@@ -20,7 +20,7 @@
             android:insetLeft="30dp"
             android:insetTop="20dp"
             android:insetRight="30dp"
-            android:text="Add Feat/Ability" />
+            android:text="Add Weapon" />
 
         <EditText
             android:id="@+id/abilityNameEdit"
@@ -37,6 +37,35 @@
             android:ems="10"
             android:hint="Description"
             android:inputType="text" />
+
+        <EditText
+            android:id="@+id/damageDieEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Damage Die"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/numDiceEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="# of dice"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/weaponQualityEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Weapon Quality"
+            android:inputType="number" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
