--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -10,9 +10,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Navigation Bar"
+        android:text="@string/top_bar"
         android:textColor="@color/black"
-        android:textStyle="bold"
-    />
+        android:textStyle="bold" />
 
 </LinearLayout>
