--- a/app/src/main/res/layout/fragment_dice_roller.xml
+++ b/app/src/main/res/layout/fragment_dice_roller.xml
@@ -7,52 +7,16 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="409dp"
-        android:layout_height="228dp"
-        android:orientation="vertical"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        app:layout_constraintBottom_toTopOf="@id/ButtonLayout1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/NumDiceEdit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="Number of dice..."
-            android:inputType="number"
-            android:textSize="24sp" />
-
-        <EditText
-            android:id="@+id/ModifierEdit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="Modifier..."
-            android:inputType="number"
-            android:textAlignment="textStart"
-            android:textSize="24sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/ButtonLayout1"
         android:layout_width="406dp"
         android:layout_height="136dp"
         android:orientation="horizontal"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        app:layout_constraintBottom_toTopOf="@id/ButtonLayout2"
+        app:layout_constraintBottom_toTopOf="@+id/ButtonLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearLayout"
-        tools:layout_constraintTop_toBottomOf="@id/TextLayout1">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:id="@+id/D4button"
@@ -90,10 +54,11 @@
         android:layout_width="410dp"
         android:layout_height="125dp"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ButtonLayout1"
-        tools:layout_constraintTop_toBottomOf="@id/ButtonLayout1">
+        app:layout_constraintVertical_bias="0">
 
         <ImageButton
             android:id="@+id/D10button"
@@ -127,14 +92,59 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/TextLayout2"
-        android:layout_width="407dp"
-        android:layout_height="217dp"
+        android:id="@+id/linearLayout"
+        android:layout_width="409dp"
+        android:layout_height="228dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/TextLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ButtonLayout2">
+
+        <EditText
+            android:id="@+id/NumDiceEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Number of dice..."
+            android:inputType="number"
+            android:textSize="24sp" />
+
+        <EditText
+            android:id="@+id/ModifierEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Modifier..."
+            android:inputType="number"
+            android:textAlignment="textStart"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="309dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@color/dark_pink"
+            android:text="Roll"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/TextLayout2"
+        android:layout_width="407dp"
+        android:layout_height="217dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
             android:id="@+id/ResultText"
