- changed button colors and added minor changes

--- a/app/src/main/res/layout/fragment_character_info.xml
+++ b/app/src/main/res/layout/fragment_character_info.xml
@@ -76,15 +76,25 @@
                 android:id="@+id/addHealthButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
-                android:text="+" />
+                android:backgroundTint="@color/dark_pink"
+                android:text="+"
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/subtractHealthButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
-                android:text="-" />
+                android:backgroundTint="@color/dark_pink"
+                android:text="-"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:typeface="monospace" />
         </LinearLayout>
 
         <LinearLayout
