--- a/app/src/main/res/layout/fragment_saving_throw_info.xml
+++ b/app/src/main/res/layout/fragment_saving_throw_info.xml
@@ -67,6 +67,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -122,6 +123,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -177,6 +179,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -232,6 +235,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -287,6 +291,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -342,6 +347,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
