--- a/app/src/main/res/layout/fragment_skills_info.xml
+++ b/app/src/main/res/layout/fragment_skills_info.xml
@@ -67,6 +67,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -122,6 +123,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -177,6 +179,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -232,6 +235,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -287,6 +291,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -342,6 +347,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -397,6 +403,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -452,6 +459,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -507,6 +515,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -562,6 +571,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -617,6 +627,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -672,6 +683,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -727,6 +739,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -782,6 +795,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -837,6 +851,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -892,6 +907,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -947,6 +963,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
@@ -1002,6 +1019,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/dark_pink"
                         android:text="Roll" />
 
                 </LinearLayout>
