--- a/app/src/main/res/layout/fragment_ability_sheet.xml
+++ b/app/src/main/res/layout/fragment_ability_sheet.xml
@@ -18,6 +18,7 @@
             android:id="@+id/addAbilBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/dark_pink"
             android:insetLeft="30dp"
             android:insetTop="20dp"
             android:insetRight="30dp"
