--- a/app/src/main/res/layout/weapon_list.xml
+++ b/app/src/main/res/layout/weapon_list.xml
@@ -31,7 +31,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="269dp"
+                android:layout_width="289dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="15dp">
@@ -60,9 +60,11 @@
 
             <Button
                 android:id="@+id/rollButtonAcrobatics"
-                android:layout_width="wrap_content"
+                android:layout_width="64dp"
                 android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/dark_pink"
                 android:text="Roll" />
 
         </LinearLayout>
