--- a/app/src/main/res/layout/fragment_character_info.xml
+++ b/app/src/main/res/layout/fragment_character_info.xml
@@ -84,7 +84,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
-                android:backgroundTint="@color/dark_pink"
+                android:backgroundTint="@color/blue"
                 android:text="-"
                 android:textSize="20sp"
                 android:textStyle="bold"
