--- a/app/src/main/res/layout/weapon_list.xml
+++ b/app/src/main/res/layout/weapon_list.xml
@@ -31,7 +31,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="289dp"
+                android:layout_width="241dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="15dp">
@@ -58,14 +58,29 @@
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/rollButtonAcrobatics"
-                android:layout_width="64dp"
+            <LinearLayout
+                android:layout_width="129dp"
                 android:layout_height="match_parent"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/dark_pink"
-                android:text="Roll" />
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/rollButtonAcrobatics2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/dark_pink"
+                    android:text="Attack" />
+
+                <Button
+                    android:id="@+id/rollButtonAcrobatics"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/blue"
+                    android:text="Damage" />
+            </LinearLayout>
 
         </LinearLayout>
 
