Rolls now work for skills and saving throws

--- a/app/src/main/res/layout/fragment_skills_info.xml
+++ b/app/src/main/res/layout/fragment_skills_info.xml
@@ -1029,7 +1029,7 @@
     </ScrollView>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/resultView"
         android:layout_width="match_parent"
         android:layout_height="124dp"
         android:text="Result"
