--- a/app/src/main/res/layout/fragment_saving_throw_info.xml
+++ b/app/src/main/res/layout/fragment_saving_throw_info.xml
@@ -357,7 +357,7 @@
     </ScrollView>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/resultView"
         android:layout_width="match_parent"
         android:layout_height="124dp"
         android:text="Result"
