radio buttons -> switches

--- a/app/src/main/res/layout/fragment_saving_throw_info.xml
+++ b/app/src/main/res/layout/fragment_saving_throw_info.xml
@@ -52,7 +52,7 @@
                             android:textColor="@android:color/black"
                             android:textSize="20sp" />
 
-                        <RadioButton
+                        <Switch
                             android:id="@+id/proficiencyStrength"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -108,7 +108,7 @@
                             android:textColor="@android:color/black"
                             android:textSize="20sp" />
 
-                        <RadioButton
+                        <Switch
                             android:id="@+id/proficiencyDexterity"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -164,7 +164,7 @@
                             android:textColor="@android:color/black"
                             android:textSize="20sp" />
 
-                        <RadioButton
+                        <Switch
                             android:id="@+id/proficiencyConstitution"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -220,7 +220,7 @@
                             android:textColor="@android:color/black"
                             android:textSize="20sp" />
 
-                        <RadioButton
+                        <Switch
                             android:id="@+id/proficiencyIntelligence"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -276,7 +276,7 @@
                             android:textColor="@android:color/black"
                             android:textSize="20sp" />
 
-                        <RadioButton
+                        <Switch
                             android:id="@+id/proficiencyWisdom"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -332,7 +332,7 @@
                             android:textColor="@android:color/black"
                             android:textSize="20sp" />
 
-                        <RadioButton
+                        <Switch
                             android:id="@+id/proficiencyCharisma"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
