--- a/app/src/main/res/layout/activity_ability_info.xml
+++ b/app/src/main/res/layout/activity_ability_info.xml
@@ -27,6 +27,8 @@
             android:id="@+id/abilityNameEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="Name"
             android:inputType="text" />
@@ -35,6 +37,8 @@
             android:id="@+id/abilityDescriptionEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="Description"
             android:inputType="text" />
