--- a/app/src/main/res/layout/activity_weapon_info.xml
+++ b/app/src/main/res/layout/activity_weapon_info.xml
@@ -27,6 +27,8 @@
             android:id="@+id/abilityNameEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="Name"
             android:inputType="text" />
@@ -35,6 +37,8 @@
             android:id="@+id/abilityDescriptionEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="Description"
             android:inputType="text" />
@@ -43,6 +47,8 @@
             android:id="@+id/damageDieEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="Damage Die"
             android:inputType="number" />
@@ -51,6 +57,8 @@
             android:id="@+id/numDiceEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="# of dice"
             android:inputType="number" />
@@ -59,6 +67,8 @@
             android:id="@+id/weaponQualityEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="Weapon Quality"
             android:inputType="number" />
@@ -66,7 +76,9 @@
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="34dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp" />
 
     </LinearLayout>
 
