--- a/app/src/main/res/layout/fragment_skills_info.xml
+++ b/app/src/main/res/layout/fragment_skills_info.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:paddingTop="75dp"
     android:textAlignment="center"
     tools:context="NewCharacter.SkillsInfoFragment">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="609dp"
-        android:paddingTop="75dp">
+        android:layout_height="478dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -1029,10 +1029,23 @@
     </ScrollView>
 
     <TextView
+        android:id="@+id/resultText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
+        android:paddingTop="5dp"
+        android:text="Result"
+        android:textAlignment="center"
+        android:textSize="34sp" />
+
+    <TextView
         android:id="@+id/resultView"
         android:layout_width="match_parent"
-        android:layout_height="124dp"
-        android:text="Result"
-        android:textAlignment="center" />
+        android:layout_height="72dp"
+        android:fontFamily="casual"
+        android:text="0"
+        android:textAlignment="center"
+        android:textSize="60sp"
+        tools:text="0" />
 
 </LinearLayout>
