--- a/app/src/main/res/layout/fragment_dice_roller.xml
+++ b/app/src/main/res/layout/fragment_dice_roller.xml
@@ -8,8 +8,10 @@
 
     <LinearLayout
         android:id="@+id/ButtonLayout1"
-        android:layout_width="406dp"
-        android:layout_height="136dp"
+        android:layout_width="388dp"
+        android:layout_height="128dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:orientation="horizontal"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -51,8 +53,10 @@
 
     <LinearLayout
         android:id="@+id/ButtonLayout2"
-        android:layout_width="410dp"
-        android:layout_height="125dp"
+        android:layout_width="391dp"
+        android:layout_height="111dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
